# Piano-Roll-Editor

./: .gitignore  CMakeLists.txt
Source/: Main.cpp  MainComponent.cpp  MainComponent.h  PianoRollEditorComponent.cpp
